--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -282,9 +282,12 @@ commands:
           key: v5-ui-cache-{{ .Branch }}-{{ checksum "~/workbench/ui/yarn.lock" }}
       - gcloud-auth-login
       - run:
-          name: "Download .npmrc file with Fontawesome Pro license key so FA icon SVG packages can be installed"
+          name: "Download Fontawesome Pro license key"
           working_directory: ~/workbench
-          command: gsutil cp gs://all-of-us-workbench-test-credentials/.npmrc .
+          command: |
+            gsutil cat \
+              gs://all-of-us-workbench-test-credentials/dot-npmrc-fontawesome-creds-line.txt \
+              >> ~/.npmrc
       - run:
           working_directory: ~/workbench/ui
           command: yarn install --verbose --frozen-lockfile --non-interactive
