enum is string in requestBody and kotlin fixes

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -4000,7 +4000,7 @@ paths:
           type: string
       requestBody:
         content:
-          '*/*':
+          'application/json':
             schema:
               $ref: '#/components/schemas/DataSetPreviewRequest'
         required: true
