Add option to use local code for deploy

--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
       - workbench:/home/circleci/workbench
       - yarn-cache:/home/circleci/.cache/yarn
       - ./bootstrap-docker.sh:/bootstrap-docker.sh
-
+      - ..:/mnt/local-source
 volumes:
   workbench:
   gradle-cache:
