DT-506 cleanup on vars

--- a/tanagra-aou-utils/tanagra_env_variables_template.yaml
+++ b/tanagra-aou-utils/tanagra_env_variables_template.yaml
@@ -5,10 +5,10 @@ env_variables:
   TANAGRA_DB_SOCKET_FACTORY: com.google.cloud.sql.mysql.SocketFactory
   TANAGRA_DB_URI: jdbc:mysql:///tanagra_db
   TANAGRA_DB_USERNAME: $WORKBENCH_DB_USER
-  TANAGRA_ACCESS_CONTROL_BASE_PATH: $TANAGRA_ACCESS_CONTROL_BASE_PATH
+  TANAGRA_ACCESS_CONTROL_BASE_PATH: https://$TANAGRA_ACCESS_CONTROL_BASE_PATH
   TANAGRA_ACCESS_CONTROL_MODEL: $TANAGRA_ACCESS_CONTROL_MODEL
   TANAGRA_AUTH_GCP_PROJECT_ID: $TANAGRA_AUTH_GCP_PROJECT_ID
   TANAGRA_UNDERLAY_FILES: $TANAGRA_UNDERLAY_FILES
   TANAGRA_AUTH_DISABLE_CHECKS: $TANAGRA_AUTH_DISABLE_CHECKS
   TANAGRA_AUTH_BEARER_TOKEN: $TANAGRA_AUTH_BEARER_TOKEN
-  TANAGRA_AUTH_IAP_GKE_JWT: $TANAGRA_AUTH_IAP_GKE_JWT
+  TANAGRA_AUTH_IAP_GKE_JWT: false
