Configure Absorb department external IDs for new users

--- a/api/config/config_preprod.json
+++ b/api/config/config_preprod.json
@@ -99,6 +99,9 @@
     "host": "aou.nnlm.gov",
     "credentialsKeyV2": "moodle-key-v2.txt"
   },
+  "absorb": {
+    "externalDepartmentId": "Researchers"
+  },
   "access": {
     "enableComplianceTraining": false,
     "enableEraCommons": false,
