--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -99,6 +99,9 @@
     "host": "aoudev.nnlm.gov",
     "credentialsKeyV2": "moodle-key-v2.txt"
   },
+  "absorb": {
+    "externalDepartmentId": "Development"
+  },
   "access": {
     "enableComplianceTraining": true,
     "enableEraCommons": true,
