[RW-10348][risk=low] Suspend/disable GKE app user when triggering egress alerts (#7960)
* fix pandas

* merge head

* merge head

* delete app instead

* delete app instead

* delete app instead

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -7289,6 +7289,9 @@ definitions:
       src_gke_cluster:
         description: The GKE cluster that caused the egress.
         type: string
+      src_gke_service_name:
+        description: The GKE service that caused the egress.
+        type: string
       gke_egress_mib:
         description: The amount of egress by the GKE cluster during the
           window, in mebibytes (MiB).
