--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -4246,33 +4246,24 @@ paths:
           description: A collection of data filter options
           schema:
             "$ref": "#/definitions/DataFiltersResponse"
-  "/v1/cohortbuilder/{workspaceNamespace}/{workspaceId}/variant/{searchTerm}":
+  "/v1/cohortbuilder/{workspaceNamespace}/{workspaceId}/variants":
     parameters:
       - "$ref": "#/parameters/workspaceNamespace"
       - "$ref": "#/parameters/workspaceId"
-    get:
+    post:
       tags:
         - cohortBuilder
+      consumes:
+        - application/json
       description: Returns genomic variants from VAT per specified search term
       operationId: findVariants
       parameters:
-        - in: path
-          name: searchTerm
-          type: string
+        - in: body
+          name: request
           required: true
-          description: search term (variant id, gene, rs number or chr position)
-        - in: query
-          name: pageToken
-          description: 'Pagination token retrieved from a previous call to user; used
-         for retrieving additional pages of results.'
-          type: string
-          required: false
-        - in: query
-          name: pageSize
-          description: 'Maximum number of results to return in a response. Defaults
-         to 10.'
-          type: integer
-          required: false
+          description: request body for getting VariantListResponse.
+          schema:
+            "$ref": "#/definitions/VariantFilterRequest"
       responses:
         200:
           description: A collection of variants
@@ -9284,6 +9275,60 @@ definitions:
         format: int64
       conceptName:
         type: string
+  VariantFilterRequest:
+    type: object
+    required:
+      - searchTerm
+    properties:
+      searchTerm:
+        type: string
+        description: The term used to search variants.
+      pageToken:
+        type: string
+        description: Used for retrieving additional pages of results.
+      pageSize:
+        type: integer
+        description: page size of results (default is 25)
+      geneList:
+        type: array
+        description: List of string gene names
+        items:
+          type: string
+      consequenceList:
+        type: array
+        description: List of string consequence names
+        items:
+          type: string
+      clinicalSignificanceList:
+        type: array
+        description: List of string clinical significance names
+        items:
+          type: string
+      countMin:
+        type: integer
+        format: int64
+        description: Allele count min
+      countMax:
+        type: integer
+        format: int64
+        description: Allele count max
+      numberMin:
+        type: integer
+        format: int64
+        description: Allele number min
+      numberMax:
+        type: integer
+        format: int64
+        description: Allele number max
+      frequencyMin:
+        type: number
+        description: Allele frequency min(floating point)
+      frequencyMax:
+        type: number
+        description: Allele number max(floating point)
+      sortBy:
+        type: string
+        description: sort column by
   VariantListResponse:
     type: object
     required:
