--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -13,6 +13,8 @@ services:
       - workbench:/home/circleci/workbench
       - yarn-cache:/home/circleci/.cache/yarn
       - ./bootstrap-docker.sh:/bootstrap-docker.sh
+      # Unconditionally mount the local repo into the container. Used conditionally
+      # within bootstrap-docker.sh.
       - ..:/mnt/local-source
 volumes:
   workbench:
