[risk=no][no ticket] Add option to use local code for deploy (#7956)

--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -13,7 +13,9 @@ services:
       - workbench:/home/circleci/workbench
       - yarn-cache:/home/circleci/.cache/yarn
       - ./bootstrap-docker.sh:/bootstrap-docker.sh
-
+      # Unconditionally mount the local repo into the container. Used conditionally
+      # within bootstrap-docker.sh.
+      - ..:/mnt/local-source
 volumes:
   workbench:
   gradle-cache:
