Changed Criteria attribute from isSelected to selected

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -10502,7 +10502,7 @@ components:
           type: boolean
           description: Whether criteria needs lookup in the criteria_ancestor table.
           default: false
-        isStandard:
+        standard:
           type: boolean
           description: Reveals if this criteria is standard or source.
           default: false
