Changed Criteria attribute from isBypassed to bypassed

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -7414,13 +7414,13 @@ components:
       - PUBLICATION_CONFIRMATION
     AccessBypassRequest:
       required:
-      - isBypassed
+      - bypassed
       - moduleName
       type: object
       properties:
         moduleName:
           $ref: '#/components/schemas/AccessModule'
-        isBypassed:
+        bypassed:
           type: boolean
           default: false
     CohortReviewListResponse:
