--- a/api/config/config_staging.json
+++ b/api/config/config_staging.json
@@ -117,7 +117,8 @@
     "ccSupportWhenAdminLocking": false,
     "enableRStudioGKEApp": true,
     "enableSasGKEApp": false,
-    "enableDataExplorer": false
+    "enableDataExplorer": false,
+    "enableHasEhrData": false
   },
   "actionAudit": {
     "logName": "workbench-action-audit-staging",
