--- a/api/config/cdr_config_prod.json
+++ b/api/config/cdr_config_prod.json
@@ -200,15 +200,15 @@
       "microarrayVcfManifestPath": "microarray/vcf/manifest.csv",
       "microarrayIdatManifestPath": "microarray/idat/manifest.csv",
       "wgsVdsPath": "wgs/short_read/snpindel/vds/hail.vds",
-      "wgsExomeMultiHailPath": "wgs/short_read/snpindel/exome_v7.1/multiMT/hail.mt",
-      "wgsExomeSplitHailPath": "wgs/short_read/snpindel/exome_v7.1/splitMT/hail.mt",
-      "wgsExomeVcfPath": "wgs/short_read/snpindel/exome_v7.1/vcf",
-      "wgsAcafThresholdMultiHailPath": "wgs/short_read/snpindel/acaf_threshold_v7.1/multiMT/hail.mt",
-      "wgsAcafThresholdSplitHailPath": "wgs/short_read/snpindel/acaf_threshold_v7.1/splitMT/hail.mt",
-      "wgsAcafThresholdVcfPath": "wgs/short_read/snpindel/acaf_threshold_v7.1/vcf",
-      "wgsClinvarMultiHailPath": "wgs/short_read/snpindel/clinvar_v7.1/multiMT/hail.mt",
-      "wgsClinvarSplitHailPath": "wgs/short_read/snpindel/clinvar_v7.1/splitMT/hail.mt",
-      "wgsClinvarVcfPath": "wgs/short_read/snpindel/clinvar_v7.1/vcf",
+      "wgsExomeMultiHailPath": "wgs/short_read/snpindel/exome/multiMT/hail.mt",
+      "wgsExomeSplitHailPath": "wgs/short_read/snpindel/exome/splitMT/hail.mt",
+      "wgsExomeVcfPath": "wgs/short_read/snpindel/exome/vcf",
+      "wgsAcafThresholdMultiHailPath": "wgs/short_read/snpindel/acaf_threshold/multiMT/hail.mt",
+      "wgsAcafThresholdSplitHailPath": "wgs/short_read/snpindel/acaf_threshold/splitMT/hail.mt",
+      "wgsAcafThresholdVcfPath": "wgs/short_read/snpindel/acaf_threshold/vcf",
+      "wgsClinvarMultiHailPath": "wgs/short_read/snpindel/clinvar/multiMT/hail.mt",
+      "wgsClinvarSplitHailPath": "wgs/short_read/snpindel/clinvar/splitMT/hail.mt",
+      "wgsClinvarVcfPath": "wgs/short_read/snpindel/clinvar/vcf",
       "wgsLongReadsManifestPath": "wgs/long_read/manifest.csv",
       "wgsLongReadsHailGRCh38": "wgs/long_read/hail.mt/GRCh38",
       "wgsLongReadsHailT2T": "wgs/long_read/hail.mt/T2T",
