--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -7445,7 +7445,7 @@ components:
       required:
       - displayName
       - freeTier
-      - isOpen
+      - open
       - name
       type: object
       properties:
@@ -7456,10 +7456,10 @@ components:
           type: string
         displayName:
           type: string
-        isOpen:
+        open:
           type: boolean
       description: See https://cloud.google.com/billing/reference/rest/v1/billingAccounts#BillingAccount
-        for documentation on name, displayName, and isOpen.
+        for documentation on name, displayName, and open.
     CohortListResponse:
       required:
       - items
