Replaced isGceRuntime property with gceRuntime.

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -6962,7 +6962,7 @@ components:
           description: Block size of persistent disk in bytes
         appType:
           $ref: '#/components/schemas/AppType'
-        isGceRuntime:
+        gceRuntime:
           type: boolean
           description: True if disk is used by Runtime or being used by GCE runtime
           default: false
