--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -9137,6 +9137,7 @@ definitions:
     - SNOMED
     - VISIT
     - NONE
+    - HAS_EHR_DATA
   CriteriaSubType:
     type: string
     description: possible criteria types
