Add Absorb API spec

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -170,6 +170,7 @@ swaggerSources {
     notebooks swagger3JavaClient("notebooks.yaml", "notebooks")
     jira swagger3JavaClient("jira.yaml", "jira")
     mandrill swagger3JavaClient("mandrill.yaml", "mandrill")
+    absorb swagger3JavaClient("absorb.yaml", "absorb")
     moodle swagger3JavaClient("moodle.yaml", "moodle")
     rdr swagger3JavaClient("rdr.yaml", "rdr", [
             '--model-name-prefix', 'Rdr'
