--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -6430,6 +6430,7 @@ components:
       - ARRAY_DATA
       - CONCEPT_SET
       - CONCEPT_QUICK_ADD
+      - -PERSON_HAS_EHR_DATA
     Surveys:
       type: string
       description: a survey for concepts
