Redirect users to Absorb for initial training

--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -90,6 +90,11 @@
   "zendesk": {
     "host": "https:\/\/aousupporthelp1634849601.zendesk.com"
   },
+  "absorb": {
+    "enabledForNewUsers": false,
+    "samlIdentityProviderId": "C03q5hexf",
+    "samlServiceProviderId": "133137951028"
+  },
   "moodle": {
     "host": "aoudev.nnlm.gov",
     "credentialsKeyV2": "moodle-key-v2.txt"
