Fix silent merge conflicts

--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -91,6 +91,7 @@
     "host": "https:\/\/aousupporthelp1634849601.zendesk.com"
   },
   "absorb": {
+    "externalDepartmentId": "Development",
     "enabledForNewUsers": false,
     "samlIdentityProviderId": "C03q5hexf",
     "samlServiceProviderId": "133137951028"
@@ -98,9 +99,6 @@
   "moodle": {
     "host": "aoudev.nnlm.gov",
     "credentialsKeyV2": "moodle-key-v2.txt"
-  },
-  "absorb": {
-    "externalDepartmentId": "Development"
   },
   "access": {
     "enableComplianceTraining": true,
