--- a/api/config/config_preprod.json
+++ b/api/config/config_preprod.json
@@ -91,6 +91,7 @@
     "host": "https:\/\/aoupreprodsupporthelp.zendesk.com"
   },
   "absorb": {
+    "externalDepartmentId": "Researchers",
     "enabledForNewUsers": false,
     "samlIdentityProviderId": "TODO",
     "samlServiceProviderId": "TODO"
@@ -98,9 +99,6 @@
   "moodle": {
     "host": "aou.nnlm.gov",
     "credentialsKeyV2": "moodle-key-v2.txt"
-  },
-  "absorb": {
-    "externalDepartmentId": "Researchers"
   },
   "access": {
     "enableComplianceTraining": false,
