Add short-lived feature flag to ensure safe prod release

--- a/api/config/config_preprod.json
+++ b/api/config/config_preprod.json
@@ -92,6 +92,7 @@
   },
   "absorb": {
     "externalDepartmentId": "Researchers",
+    "externalDepartmentIdPopulatedForNewUsers": true,
     "enabledForNewUsers": false,
     "samlIdentityProviderId": "TODO",
     "samlServiceProviderId": "TODO"
