--- a/api/config/config_prod.json
+++ b/api/config/config_prod.json
@@ -92,6 +92,7 @@
   },
   "absorb": {
     "externalDepartmentId": "Researchers",
+    "externalDepartmentIdPopulatedForNewUsers": false,
     "enabledForNewUsers": false,
     "samlIdentityProviderId": "TODO",
     "samlServiceProviderId": "TODO"
