--- a/api/config/config_stable.json
+++ b/api/config/config_stable.json
@@ -92,6 +92,7 @@
   },
   "absorb": {
     "externalDepartmentId": "Development",
+    "externalDepartmentIdPopulatedForNewUsers": true,
     "enabledForNewUsers": false,
     "samlIdentityProviderId": "C03q5hexf",
     "samlServiceProviderId": "133137951028"
