--- a/api/config/config_preprod.json
+++ b/api/config/config_preprod.json
@@ -91,6 +91,8 @@
     "host": "https:\/\/aoupreprodsupporthelp.zendesk.com"
   },
   "absorb": {
+    "externalDepartmentId": "Researchers",
+    "externalDepartmentIdPopulatedForNewUsers": true,
     "enabledForNewUsers": false,
     "samlIdentityProviderId": "TODO",
     "samlServiceProviderId": "TODO"
