--- a/api/config/config_prod.json
+++ b/api/config/config_prod.json
@@ -91,6 +91,8 @@
     "host": "https:\/\/aousupporthelp.zendesk.com"
   },
   "absorb": {
+    "externalDepartmentId": "Researchers",
+    "externalDepartmentIdPopulatedForNewUsers": false,
     "enabledForNewUsers": false,
     "samlIdentityProviderId": "TODO",
     "samlServiceProviderId": "TODO"
