--- a/api/config/config_preprod.json
+++ b/api/config/config_preprod.json
@@ -94,6 +94,8 @@
     "externalDepartmentId": "Researchers",
     "externalDepartmentIdPopulatedForNewUsers": true,
     "enabledForNewUsers": false,
+    "rtTrainingCourseId": "TODO",
+    "ctTrainingCourseId": "TODO",
     "samlIdentityProviderId": "TODO",
     "samlServiceProviderId": "TODO"
   },
