mc-aou commit to be able to rebase

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -8460,9 +8460,10 @@ components:
       - CROMWELL
       - RSTUDIO
       - SAS
-    DiskStatus:
-      type: string
-      enum:
+      - SAGEMAKER
+  DiskStatus:
+    type: string
+    enum:
       - Creating
       - Restoring
       - Failed
