--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -6172,7 +6172,7 @@ paths:
       requestBody:
           description: request body for getting VariantListResponse.
           content:
-            'application/json`':
+            'application/json':
               schema:
                 "$ref": "#/components/schemas/VariantFilterRequest"
           required: true
