DT-527 add overlay for variant filters

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -6205,7 +6205,7 @@ paths:
       requestBody:
         description: request body for getting VariantListResponse.
         content:
-          application/json':
+          application/json:
             schema:
               "$ref": "#/components/schemas/VariantFilterRequest"
         required: true
