--- a/api/build.gradle
+++ b/api/build.gradle
@@ -526,6 +526,11 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$project.ext.KOTLIN_VERSION"
 
+    implementation platform('software.amazon.awssdk:bom:2.20.22')
+    implementation 'software.amazon.awssdk:regions'
+    implementation 'software.amazon.awssdk:s3'
+    implementation 'software.amazon.awssdk:sagemaker'
+
     // war plugin. Add this to scope of the compile configuration, but do not include in .war file.
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
 
