--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -389,6 +389,7 @@ jobs:
 
   api-test-coverage:
     #Jacoco runs against test results to get test coverage
+    executor: workbench-executor
     steps:
       - run-api-test:
           additional_steps:
@@ -775,6 +776,7 @@ workflows:
       - api-test-coverage:
           requires:
           - api-unit-test
+      - api-unit-test
       # Deploy to "test" on main branch merges
       - api-deploy-to-test:
           <<: *filter-main-branch
