--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -376,10 +376,13 @@ jobs:
                   GRADLE_ARGS=$(echo $CLASSNAMES | awk '{for (i=1; i<=NF; i++) print "--tests", $i }')
                   gradle :test $GRADLE_ARGS
             - run:
+                working_directory: ~/workbench/api
+                command: ls .
+            - run:
                 name: Rename Jacoco exec file
                 working_directory: ~/workbench/api
                 command: |
-                  mv "~/workbench/api/build/jacoco/test.exec" "~/workbench/api/build/jacoco/test_$CIRCLE_NODE_INDEX.exec"
+                  mv "./build/jacoco/test.exec" "./build/jacoco/test_$CIRCLE_NODE_INDEX.exec"
             - run:
                 name: Lint Java code
                 working_directory: ~/workbench/api
