--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -405,13 +405,12 @@ jobs:
                   at: /tmp/workspace
             - run:
                 working_directory: ~/workbench/api
-                command: ls /tmp/workspace/api
-            - run:
-                working_directory: ~/workbench/api
-                command: ls /tmp/workspace/api/build
-            - run:
-                working_directory: ~/workbench/api
                 command: ls /tmp/workspace/api/build/jacoco
+            - run:
+                name: Lint Java code
+                working_directory: ~/workbench/api
+                command: |
+                  ./gradlew jacocoTestReport
 
   api-local-test:
     # The local API server starts two Java processes (the API server and the cron emulator).
