Copy Jacoco exec files locally

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -407,6 +407,11 @@ jobs:
                 working_directory: ~/workbench/api
                 command: ls /tmp/workspace/api/build/jacoco
             - run:
+                name: Copy Jacoco exec files locally
+                working_directory: ~/workbench/api
+                command: |
+                  cp "/tmp/workspace/api/build/jacoco/." "./build/jacoco"
+            - run:
                 name: Generate Jacoco Coverage Report
                 working_directory: ~/workbench/api
                 command: |
